--- a/WannabeReddit/Views/Shared/_Layout.cshtml
+++ b/WannabeReddit/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Here da Posts", "Index", "Posts")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
