--- a/WannabeReddit/Views/Home/Index.cshtml
+++ b/WannabeReddit/Views/Home/Index.cshtml
@@ -16,7 +16,11 @@
         <li class="list-group-item active"> 
         <div class="row">
           <div class ="col-md-8"><strong>Top posts</strong></div>
+            @if (HttpContext.Current.User.Identity.IsAuthenticated)
+            {
+
             <div class="col-md-4">@Html.ActionLink("Create Post", "Create", "Posts", null, new { @class = "btn btn-primary btn-lg &raquo" })</div>
+            }
            </div>
         </li>
 
