--- a/WannabeReddit/Views/Posts/Create.cshtml
+++ b/WannabeReddit/Views/Posts/Create.cshtml
@@ -1,4 +1,6 @@
 ﻿@model WannabeReddit.Models.Post
+    @using Microsoft.AspNet.Identity
+    
 
 @{
     ViewBag.Title = "Create";
@@ -31,37 +33,16 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UpVotes, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UpVotes, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UpVotes, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @*<div class="hidden">
+            <input type="text" name="UserId" value="@User.Identity.GetUserId()" />
+        </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DownVotes, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DownVotes, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DownVotes, "", new { @class = "text-danger" })
-            </div>
+           
+                
+            @Html.Hidden("UserId", User.Identity.GetUserId())
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DatePosted, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DatePosted, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DatePosted, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+      
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
