--- a/WannabeReddit/Views/Posts/Details.cshtml
+++ b/WannabeReddit/Views/Posts/Details.cshtml
@@ -1,65 +1,16 @@
 ﻿@model WannabeReddit.Models.Post
+@using Microsoft.AspNet.Identity
+@using WannabeReddit.Models;
 
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>@Html.DisplayFor(model => model.Title)</h2>
 
-<div>
-    <h4>Post</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpVotes)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpVotes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DownVotes)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DownVotes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DatePosted)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DatePosted)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-
-    </dl>
-</div>
+    <h4>@Html.DisplayFor(model => model.Body)</h4>
+    
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
